syntax = "proto3";
package HS.Protobuf.GameGate;

enum GameGateProtocl{
	GAMEGATE_PROTOCL_NONE = 0;
	GAMEGATE_PROTOCL_REGISTER_SESSION_TO_GG_REQ = 31001;
	GAMEGATE_PROTOCL_REGISTER_SESSION_TO_GG_RESP = 31002;
}

message RegisterSessionToGGRequest{
	string session = 1;
}
message RegisterSessionToGGResponse{
	int32 resultCode = 1;
	string resultMsg = 2;
}